--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 languageCode = "en-us"
-theme = "PaperMod"
-title = "My New Netlify Victor Hugo Site"
+theme = "hugo-PaperMod"
+title = "2 - My New Netlify Victor Hugo Site"
