--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,9 @@
 languageCode = "en-us"
 theme = "hugo-PaperMod"
 title = "2 - My New Netlify Victor Hugo Site"
+enableRobotsTXT = true
+buildDrafts = false
+buildFuture = false
+buildExpired = false
+
+
