--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-PaperMod"]
 	path = themes/hugo-PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod
+[submodule "site/themes/hugo-PaperMod"]
+	path = site/themes/hugo-PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod
